src/styles/components/_hero.scss
.hero {
  position: relative;
  display: flex;
  width: 100%;
  margin-top: -72px;
  // background: $colour-beige;
  overflow: hidden;

  .container {
    position: relative;
  }

  .hero-content {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    padding-top: 72px;
    align-items: center;

    &.half {
      flex-direction: column;

      @media (min-width: $breakpoint-md) {
        flex-direction: row;
      }

      .hero-content__text {
        width: 100%;
        align-items: flex-start;
        //margin-top: -50%;

        @media (min-width: $breakpoint-md) {
          width: 50%;
          margin-top: unset;
        }
      }

      .hero-content__image {
        width: 75%;

        @media (min-width: $breakpoint-md) {
          width: 50%;
        }
      }
    }

    &.full {
      .hero-content__text {
        width: 100%;
        height: 100%;
        text-align: center;
      }
    }
  }

  .hero-content__text {
    color: $colour-beige;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    text-align: left;

    .heading {
      width: 100%;
    }

    .subheading {
      width: 100%;
      max-width: 800px;
    }
  }

  .hero-content__image {
    // position: absolute;
    position: relative;
    top: 0;
    right: 0;
    width: 100%;
    background: $colour-red;
    border-radius: 50%;
    overflow: clip;

    @media (min-width: $breakpoint-md) {
      position: relative;
      width: 600px;
      height: auto;
      // bottom: -20%;
    }

    img {
      width: 100%;
      height: 100%;
      margin: 0 auto;
      animation: headbob 3s;
    }
  }

  &.hero-large {
    // height: 80vh;

    @media (min-width: $breakpoint-md) {
      height: 70vh;
      min-height: 700px;
      max-height: 700px;
    }
  }

  &.hero-medium {
    // height: 70vh;
    min-height: 700px;
    max-height: 1000px;
  }

  &.hero-small {
    // height: 50vh;
    min-height: 500px;
    max-height: 1000px;
  }
}

